<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_weight="140"
        android:background="#C7C7C7" >

        <TextView
            android:id="@+id/Text"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/main_aboutTitle"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnReturn"
            android:layout_width="69dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#6CA6CD"
            android:gravity="center"
            android:text="@string/about_returnBtn" />
        
        <Button
            android:id="@+id/btnHelp"
            android:layout_width="69dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#6CA6CD"
            android:gravity="center"
            android:text="@string/about_helpBtn" />
    </RelativeLayout>
    
     <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_centerHorizontal="true"
            android:layout_weight="140"
            android:src="@drawable/ic_launcher" />

     <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:gravity="center"
        android:text="@string/about_versionName" />
    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/explainTextView"
            android:layout_width="match_parent"
            android:layout_above="@+id/btnFollow"
            android:layout_marginBottom="5dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/about_notice" />


        <Button
            android:id="@+id/btnFollow"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="#6CA6CD"
            android:layout_gravity="center"
            android:text="@string/about_followBtn" />
        
        <Button
            android:id="@+id/btnSendEmail"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="#6CA6CD"
            android:layout_gravity="center"
            android:text="@string/about_sendEmailBtn" />

        <TextView
            android:id="@+id/signatureTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_above="@+id/copyrightTextView"
            android:gravity="center"
            android:text="Happy Tutor" />
    <TextView
            android:id="@+id/copyrightTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="欢乐的图特 版权所有" />
    </LinearLayout>

</RelativeLayout>