<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_weight="140"
        android:background="#C7C7C7" >

        <TextView
            android:id="@+id/Text"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/help_title"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnHelpReturn"
            android:layout_width="69dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#6CA6CD"
            android:gravity="center"
            android:text="@string/help_returnBtn" />
    </RelativeLayout>
    
     <ImageView
            android:id="@+id/LogoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher" />

     <TextView
        android:id="@+id/appTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LogoImageView"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/stepTextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"            
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_below="@+id/appTextView"
        android:layout_centerInParent="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/help_step" />
    
    <TextView
        android:id="@+id/helpInfoTextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stepTextView"
        android:layout_centerInParent="true"
        android:text="@string/help_info" />
    
    <TextView
        android:id="@+id/updateTextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"            
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_below="@+id/helpInfoTextView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_centerInParent="true"
        android:text="@string/help_update" />
    
    <TextView
        android:id="@+id/updeteInfoTextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/updateTextView"
        android:layout_centerInParent="true"
        android:text="@string/help_updeteInfo" />
    


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/SignatureTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="#4876FF"
            android:text="Happy Tutor" />
    <TextView
            android:id="@+id/CopyrightTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textColor="#4876FF"
            android:text="欢乐的图特 版权所有" />
    </LinearLayout>

</RelativeLayout>